<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="clouddown">clouddown</string>
    <string name="SelectOption">You need to select one option !!!</string>
    <string name="LoadApp_notification_channel_id">LoadApp_channel</string>
    <string name="LoadApp_notification_channel_name">LoadApp</string>
    <string name="ok">OK</string>
    <string name="file_name">Filename: </string>
    <string name="status">Status: </string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
</resources>
