<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/labelFilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_detail_normal_margin"
        android:layout_marginTop="@dimen/content_detail_normal_margin"
        android:text="@string/file_name"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/file_name" />

    <TextView
        android:id="@+id/textFilename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_detail_normal_margin"
        android:layout_marginEnd="@dimen/content_detail_normal_margin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelFilename"
        app:layout_constraintTop_toTopOf="@id/labelFilename"
        tools:text="File name" />


    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_detail_large_margin"
        android:text="@string/status"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/labelFilename"
        app:layout_constraintStart_toStartOf="@id/labelFilename"
        app:layout_constraintTop_toBottomOf="@+id/labelFilename" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_detail_normal_margin"
        android:layout_marginEnd="@dimen/content_detail_normal_margin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelStatus"
        app:layout_constraintTop_toTopOf="@id/labelStatus"
        tools:text="status" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_detail_normal_margin"
        android:layout_marginEnd="@dimen/content_detail_normal_margin"
        android:layout_marginBottom="@dimen/content_detail_normal_margin"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>